syntax = "proto3";

package org.coinen.pacman.metrics;

option java_package = "org.coinen.pacman.metrics";
option java_outer_classname = "Metrics";
option java_multiple_files = true;

message Meter {
    Id id                        = 1;
    repeated Measurement measure = 2;
}

enum Type {
    COUNTER              = 0;
    GAUGE                = 1;
    LONG_TASK_TIMER      = 2;
    TIMER                = 3;
    DISTRIBUTION_SUMMARY = 4;
    OTHER                = 5;
}

message Measurement {
    double value        = 1;
    Statistic statistic = 2;
}

message Tag {
    string key   = 1;
    string value = 2;
}

message Id {
    string name              = 1;
    repeated Tag tag         = 2;
    Type type                = 3;
    Id synthetic_association = 4;
    string description       = 5;
    string base_unit         = 6;
}

enum Statistic {
    TOTAL        = 0;
    TOTAL_TIME   = 1;
    COUNT        = 2;
    MAX          = 3;
    VALUE        = 4;
    UNKNOWN      = 5;
    ACTIVE_TASKS = 6;
    DURATION     = 7;
}

message MetricsSnapshot {
    map<string, string> tags = 1;
    repeated Meter meters    = 2;
}

message Skew {
    int64 timestamp = 1;
}
