syntax = "proto3";

package org.coinen.pacman.metrics;

import "google/protobuf/empty.proto";
import "metrics.proto";

option java_package = "org.coinen.pacman.metrics";
option java_multiple_files = false;


service MetricsSnapshotHandler {
    rpc StreamMetricsSnapshots (stream MetricsSnapshot) returns (google.protobuf.Empty) {}
    rpc SendMetricsSnapshot (MetricsSnapshot) returns (google.protobuf.Empty) {}
}
